kubernetes/fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: fastapi-deployment
    namespace: minecraft-servers
spec:
    replicas: 1
    selector:
        matchLabels:
            app: fastapi
    template:
        metadata:
            labels:
                app: fastapi
        spec:
            serviceAccountName: fastapi-sa
            containers:
                - name: fastapi
                  # 깃허브 액션이 배포할 때 자동으로 최신 이미지 태그로 바꿔치기 합니다.
                  # (지금은 latest로 두셔도 상관없습니다)
                  image: de31/minecraft-fastapi:c2b63730becd6890eb287022ffbf62c6d49309da
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 8000
                  resources:
                      requests:
                          cpu: 500m
                          memory: 512Mi
                      limits:
                          cpu: 2
                          memory: 2Gi
                  livenessProbe:
                      httpGet:
                          path: /health
                          port: 8000
                      initialDelaySeconds: 30
                      periodSeconds: 10
                  readinessProbe:
                      httpGet:
                          path: /health
                          port: 8000
                      initialDelaySeconds: 10
                      periodSeconds: 5
