kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: fastapi-service
    namespace: minecraft-servers
spec:
    type: NodePort
    selector:
        app: fastapi
    ports:
        - port: 8000
          targetPort: 8000
          nodePort: 30800
