kubernetes/fastapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: fastapi-ingress
    namespace: minecraft-servers
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    ingressClassName: nginx
    rules:
        - host: api.msdca.shop  # ⬅️ mc.msdca.shop → msdca.shop 변경
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: fastapi-service
                            port:
                                number: 8000
